--- a/force-app/main/default/classes/models/SurveyModel.cls
+++ b/force-app/main/default/classes/models/SurveyModel.cls
@@ -5,11 +5,20 @@ public class SurveyModel {
     @AuraEnabled public Id activeVersionId { get; set; }
     @AuraEnabled public List<SurveyVersionModel> versions { get; set; }
 
-    public static SurveyModel toJson(Survey__c survey) {
+    public static SurveyModel toJson(Survey__c survey, List<SurveyVersion__c> versions) {
         SurveyModel model = new SurveyModel();
         model.id = survey.Id;
         model.title = survey.Name;
         model.activeVersionId = survey.ActiveVersion__c;
+        model.description = survey.Description__c;
+        
+        model.versions = new List<SurveyVersionModel>();
+        if(versions != null) {
+            for(SurveyVersion__c version : versions) {
+                model.versions.add(SurveyVersionModel.toJson(version));
+            }
+        }
+        
         return model;
     }
 
@@ -20,6 +29,17 @@ public class SurveyModel {
             ActiveVersion__c = this.activeVersionId,
             Description__c = this.description
         );
+        
+        // Handle versions if they exist
+        if(this.versions != null && !this.versions.isEmpty()) {
+            List<SurveyVersion__c> versionRecords = new List<SurveyVersion__c>();
+            for(SurveyVersionModel versionModel : this.versions) {
+                versionRecords.add(versionModel.toRecord());
+            }
+            // Note: We can't insert/update here as this is just a model method
+            // The service layer should handle the actual DML operations
+        }
+        
         return record;
     }
 }
