--- a/unpackaged/pre/classes/SurveyVersionModel.cls
+++ b/unpackaged/pre/classes/SurveyVersionModel.cls
@@ -3,7 +3,7 @@ public class SurveyVersionModel {
     @AuraEnabled public Id surveyId { get; set; }
     @AuraEnabled public String name { get; set; }
     @AuraEnabled public Decimal version { get; set; }
-    @AuraEnabled public Boolean isActive { get; set; }
+    @AuraEnabled public String status { get; set; }
     @AuraEnabled public String body { get; set; }
     @AuraEnabled public List<PageModel> pages { get; set; }
     
@@ -13,7 +13,7 @@ public class SurveyVersionModel {
         model.surveyId = record.Survey__c;
         model.name = record.Name;
         model.version = record.Version__c;
-        model.isActive = record.Is_Active__c;
+        model.status = record.Status__c;
         model.body = record.Body__c;
         return model;
     }
@@ -24,7 +24,7 @@ public class SurveyVersionModel {
             Survey__c = this.surveyId,
             Name = this.name,
             Version__c = this.version,
-            Is_Active__c = this.isActive,
+            Status__c = this.status,
             Body__c = this.body
         );
     }
